added placeholder text

--- a/index.html
+++ b/index.html
@@ -88,13 +88,15 @@
 </div>
 <div class="gs-journalism">
 	<div id="journalism-map-container">
-		<div id="graph-title"></div>
-		<div id="zip-code-search"></div>
-		<div id="graph-legend"></div>
-		<div id="graph-left"></div>
-		<div id="graph-right"></div>
-		<div id="source"></div>
-		<div id="THP-logo"></div>
+		<div id="graph-title">
+			<h2>Percent of population that would lose SNAP waiver eligibility under Final Rule</h2>
+		</div>
+		<div id="zip-code-search">Enter a zip code</div>
+		<div id="graph-legend">Legend</div>
+		<div id="graph-left">Left Graph</div>
+		<div id="graph-right">Right Graph</div>
+		<div id="source">Source: USDA and author's calculations</div>
+		<div id="THP-logo">THP logo</div>
 	</div>
 </div>
 
