added THP-brookings logo

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <div id="brookings-header">Brookings</div>
 <div class ='interactive-container'>
 <div class='section header short'>
-	<h1 class = "title">Percent of population that would lose SNAP waiver eligibility under Final Rule</h1>
+	<h1>Percent of population that would lose SNAP waiver eligibility under Final Rule</h1>
 
   </div>
 		<div class = "section zip-code-search short">Enter a zip code</div>
@@ -97,7 +97,7 @@
 			</div>
 
 		<div class = "section source short">Source: USDA and author's calculations</div>
-		<div class = "section THP-logo short">THP logo</div>
+		<div class = "section THP-logo short"><img src='assets/THP_Brookings_DualLogo-01.png'/></div>
 </div>
 
 
