--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			</div>
 
 		<div class = "section source short">Source: USDA and author's calculations</div>
-		<div class = "section THP-logo short"><img src='assets/THP_Brookings_DualLogo-01.png'/></div>
+		<div class = "thp-logo-container"><img src='assets/THP_Brookings_DualLogo-01.png'/></div>
 </div>
 
 
