source left aligned and centered on mobile

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				<img src='assets/graph_left.jpg'/>
 			</div>
 
-		<div class = "section source short">Source: USDA and author's calculations</div>
+		<div class = "source-container"><strong>Source:</strong> USDA and author's calculations</div>
 		<div class = "thp-logo-container"><img src='assets/THP_Brookings_DualLogo-01.png'/></div>
 </div>
 
