title aligned left on desktop and center on mobile

--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
 <body>
 <div id="brookings-header">Brookings</div>
 <div class ='interactive-container'>
-<div class='section header short'>
+<div class='title-container'>
 	<h1>Percent of population that would lose SNAP waiver eligibility under Final Rule</h1>
-
   </div>
 		<div class = "section zip-code-search short">Enter a zip code</div>
 		<div class="section graph-legend short">Legend</div>
