legend and input centered on different lines

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 <body>
 <div id="brookings-header">Brookings</div>
 <div class ='interactive-container'>
-<div class='title-container'>
+<div class='title-container center-align'>
 	<h1>Percent of population that would lose SNAP waiver eligibility under Final Rule</h1>
   </div>
-		<div class = "section zip-code-search short">Enter a zip code</div>
-		<div class="section graph-legend short">Legend</div>
+		<div class = "search-container center-align">Enter a zip code</div>
+		<div class="legend-container center-align">Legend</div>
 				<div class='section graph-left tall'>
 				<img src='assets/graph_left.jpg'/>
 			</div>
@@ -95,7 +95,7 @@
 				<img src='assets/graph_left.jpg'/>
 			</div>
 
-		<div class = "source-container"><strong>Source:</strong> USDA and author's calculations</div>
+		<div class = "source-container left-align"><strong>Source:</strong> USDA and author's calculations</div>
 		<div class = "thp-logo-container"><img src='assets/THP_Brookings_DualLogo-01.png'/></div>
 </div>
 
