renamed logo selector

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			</div>
 
 		<div class = "source-container left-align"><strong>Source:</strong> USDA and author's calculations</div>
-		<div class = "thp-logo-container"><img src='assets/THP_Brookings_DualLogo-01.png'/></div>
+		<div class = "logo-container"><img src='assets/THP_Brookings_DualLogo-01.png'/></div>
 </div>
 
 
