added zip code input box

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <div class='title-container center-align'>
 	<h1>Percent of population that would lose SNAP waiver eligibility under Final Rule</h1>
   </div>
-		<div class = "search-container center-align">Enter a zip code</div>
+		<div class = "search-container center-align"><input id = "zip_search" name = "zip"  type="search" placeholder="Enter a zip code"></div>
 		<div class="legend-container center-align">Legend</div>
 				<div class='section graph-left tall'>
 				<img src='assets/graph_left.jpg'/>
