hard-coded legend

--- a/index.html
+++ b/index.html
@@ -87,7 +87,16 @@
 	<h1>Percent of population that would lose SNAP waiver eligibility under Final Rule</h1>
   </div>
 		<div class = "search-container center-align"><input id = "zip_search" name = "zip"  type="search" placeholder="Enter a zip code"></div>
-		<div class="legend-container center-align">Legend</div>
+		<div class="legend-container center-align">
+			<svg height="50">
+				<rect height="50" width="300" fill-opacity="0" ></rect>
+				<circle cx="15" cy="25" r="10" fill="#053769"/>
+				<text fill = "black" x="30" y="30" font-weight="bold">National</text>
+				<circle cx="115" cy="25" r="10" fill="#65A4E5"/>
+				<text fill = "black" x="130" y="30" font-weight="bold">State</text>
+				<circle cx="215" cy="25" r="10" fill="#FF5E1A"/>
+				<text fill = "black" x="230" y="30" font-weight="bold">County</text>
+			</svg></div>
 				<div class='section graph-left tall'>
 				<img src='assets/graph_left.jpg'/>
 			</div>
