--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 	<script src="sitewide.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 	<title>SNAP Work Requirements Interactive</title>
 	<style type="text/css">
 		body {
@@ -98,7 +99,7 @@
 				<text fill = "black" x="230" y="30" font-weight="bold">County</text>
 			</svg></div>
 				<div class='section graph-left tall'>
-				<img src='assets/graph_left.jpg'/>
+
 			</div>
 				<div class='section graph-right tall'>
 				<img src='assets/graph_left.jpg'/>
