added code for zip code validation

--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
 <div class='title-container center-align'>
 	<h1>Percent of population that would lose SNAP waiver eligibility under Final Rule</h1>
   </div>
-		<div class = "search-container center-align"><input id = "zip_search" name = "zip"  type="search" placeholder="Enter a zip code"></div>
+		<div class = "search-container center-align">
+			<input id = "zip_search" name = "zip"  type="search" placeholder="Enter a zip code">
+			<button id = "go" type="button">Go</button>
+		</div>
 		<div class="legend-container center-align">
 			<svg class = "legend-svg" height="50" width="400">
 				<rect height="50" width="400" fill-opacity="0" ></rect>
