--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 	<script src="sitewide.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<title>SNAP Work Requirements Interactive</title>
 	<style type="text/css">
 		body {
