basic axis set up in a for loop

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 				<circle cx="115" cy="25" r="10" fill="#65A4E5"/>
 				<circle cx="215" cy="25" r="10" fill="#FF5E1A"/>
 			</svg></div>
-				<div class='section graph-left tall'>
+				<div class='section graph1 tall'>
 
 			</div>
-				<div class='section graph-right tall'>
+				<div class='section graph2 tall'>
 			</div>
 
 		<div class = "source-container left-align"><strong>Source:</strong> USDA and author's calculations</div>
