--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
 			<input id = "zip_search" name = "zip"  type="search" placeholder="Enter a zip code">
 			<button id = "go" type="button">Go</button>
 		</div>
+		<div class = "error-box center-align">
+		</div>
 		<div class="legend-container center-align">
 			<svg class = "legend-svg" height="50" width="400">
 				<rect height="50" width="400" fill-opacity="0" ></rect>
