legend changed to vertical

--- a/index.html
+++ b/index.html
@@ -94,13 +94,24 @@
 		<div class = "error-box center-align">
 		</div>
 		<div class="legend-container center-align">
-			<svg class = "legend-svg" height="50" width="400">
+			<div class="center-align">
+			<svg class = "legend-svg national" height="40" width="400">
 				<rect height="50" width="400" fill-opacity="0" ></rect>
-				<circle cx="15" cy="25" r="10" fill="#053769"/>
-				<text fill = "black" x="30" y="30" font-weight="bold">National</text>
+				<circle cx="115" cy="25" r="10" fill="#053769"/>
+				<text fill = "black" x="130" y="30" font-weight="bold">National</text>
+			</svg>
+		</div>
+		<div class="center-align">
+			<svg class = "legend-svg state" height="40" width="400">
 				<circle cx="115" cy="25" r="10" fill="#65A4E5"/>
-				<circle cx="215" cy="25" r="10" fill="#FF5E1A"/>
-			</svg></div>
+			</svg>
+		</div>
+		<div class="center-align">
+			<svg class = "legend-svg county" height="40" width="400">
+				<circle cx="115" cy="25" r="10" fill="#FF5E1A"/>
+			</svg>
+		</div>
+		</div>
 				<div class='section graph1 tall'>
 
 			</div>
